--- a/gb/16/11/7/n8469052.md
+++ b/gb/16/11/7/n8469052.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nat207/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nat207/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nat207/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nat207/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nat207/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nat207/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nat207/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nat207/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/nat207/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nat207/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nat207/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nat207/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nat207/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>欧洲举行法轮大法法会 修炼故事打动人心</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1213455611-2-320x200.jpg" />
+
 <h6></h6>
 <hr>
 	<p>【大纪元2016年11月08日讯】（大纪元记者文婧德国慕尼黑报导）不进山不进庙，每天上班上学，孩子老人需要照顾，还有社会责任需要履行，这样的生活如何修炼？在被迫害中如何保持平和心态反迫害？将近80岁的老人如何盘腿打坐？处处争强的年轻律师又如何能达到修炼人的状态？</p>
-<p>在11月6日德国慕尼黑举办的<ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>法轮大法修炼心得交流会上，十几位欧洲学员讲述了他们的体会。来自欧洲31个国家的部分<ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员近一千二百人参加了此次盛会。</p>
-<p><ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E6%B3%95%E4%BC%9A.md#1">法会</a>开始后，主持人首先以中丶英和德三种语言宣读了<ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>创始人李洪志先生发来的贺词，李洪志先生祝法会圆满成功！</p>
+<p>在11月6日德国慕尼黑举办的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>法轮大法修炼心得交流会上，十几位欧洲学员讲述了他们的体会。来自欧洲31个国家的部分<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员近一千二百人参加了此次盛会。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E4%BC%9A.md#1">法会</a>开始后，主持人首先以中丶英和德三种语言宣读了<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>创始人李洪志先生发来的贺词，李洪志先生祝法会圆满成功！</p>
 <p>当静心聆听法轮功学员发言之后，无论他们讲述的是神韵卖票协调工作，还是翻译大法书，抑或是放下根深蒂固的观念和执著，无不是围绕着“修自己”这个主题。</p>
-<figure id="attachment_8469130" style="width: 450px" class="wp-caption aligncenter"><img class="wp-image-8469130 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/11/IMG_0091-450x300.jpg" width="450" b="300" /><figcaption class="wp-caption-text">2016年11月6日，<ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>法轮大法心得交流会在慕尼黑成功召开。（沈力／大纪元）</figcaption></figure>
-<figure id="attachment_8469135" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-8469135" src="https://i.epochtimes.com/assets/uploads/2016/11/2016-11-06_Fahui-Day3_MB2563-450x300.jpg" alt="2016年11月6日，欧洲法轮大法心得交流会在慕尼黑成功召开。（沈力／大纪元）" width="450" b="300" /><figcaption class="wp-caption-text">2016年11月6日，欧洲法轮大法心得交流会在慕尼黑成功召开。（沈力／大纪元）</figcaption></figure>
+<figure id="attachment_8469130" aria-describedby="caption-attachment-8469130" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/11/IMG_0091-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8469130 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/11/IMG_0091-450x300.jpg" width="450" b="300" /></a><figcaption id="caption-attachment-8469130" class="wp-caption-text">2016年11月6日，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%AC%A7%E6%B4%B2.md#1">欧洲</a>法轮大法心得交流会在慕尼黑成功召开。（沈力／大纪元）</figcaption></figure>
+<figure id="attachment_8469135" aria-describedby="caption-attachment-8469135" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/11/2016-11-06_Fahui-Day3_MB2563-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-8469135" src="https://i.epochtimes.com/assets/uploads/2016/11/2016-11-06_Fahui-Day3_MB2563-450x300.jpg" alt="2016年11月6日，欧洲法轮大法心得交流会在慕尼黑成功召开。（沈力／大纪元）" width="450" b="300" /></a><figcaption id="caption-attachment-8469135" class="wp-caption-text">2016年11月6日，欧洲法轮大法心得交流会在慕尼黑成功召开。（沈力／大纪元）</figcaption></figure>
 <p><strong>善和忍唤醒政治家善心 欧洲议会谴责强摘器官</strong></p>
 <p>今年9月，欧洲议会通过了一项书面声明，要求欧盟委员会和欧盟理事会采取行动制止中共强摘法轮功学员以及其他良心犯的器官。超过半数（414位）的欧洲议员签署了这项声明。</p>
 <p>在这些抽象的机构名字和数字后面，是一个个实实在在的，大大小小的人心的变化。</p>
@@ -48,13 +48,13 @@
 <p>来自瑞典的年轻律师尼克拉斯（Nicolas）一直觉得自己是一个幸运的人，只是以前和现在对“幸运”的看法不一样了。</p>
 <p>他说：“在生活里，别人给过我很多东西，我也得到了很多机会，使我能够从儿时起就学到很多知识，开发多种技能。除此之外，我的母亲竭尽全力培养我的自信心，使我在挑战面前不畏缩。然而，我从小却害怕失败，所以我一直努力。无论做什么：学习丶体育丶音乐和工作等，我都要成功，要做得最好。”</p>
 <p>等到他30岁开始修炼法轮功之后，他才明白：“我所学到的这些技能，是要助师正法，救度众生的。这是一项最重要的使命。”在修炼过程时，他多次经受修去怕心的考验。</p>
-<p>一次他被邀请去参加一个企业家研讨会，与会者有100多人，均来自顶级公司。研讨会上，一个人将做讲座，他在与中国做生意方面有特别的研究。在他的演讲期间，尼克拉斯意识到，他有机会给他提几个有针对性的问题，就可以给在座的所有听众<ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E8%AE%B2%E7%9C%9F%E7%9B%B8.md#1">讲真相</a>。但在这一刻，怕心强烈地反映出来，他说，他好像被固定在座位上，动不了。机会就这样一点一点地从身边溜走了。</p>
+<p>一次他被邀请去参加一个企业家研讨会，与会者有100多人，均来自顶级公司。研讨会上，一个人将做讲座，他在与中国做生意方面有特别的研究。在他的演讲期间，尼克拉斯意识到，他有机会给他提几个有针对性的问题，就可以给在座的所有听众<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%AE%B2%E7%9C%9F%E7%9B%B8.md#1">讲真相</a>。但在这一刻，怕心强烈地反映出来，他说，他好像被固定在座位上，动不了。机会就这样一点一点地从身边溜走了。</p>
 <p>在回家的路上，他下决心，以后每当怕心出现时，他要迎难而上。无论怕心多大或者多小，都不能让怕心占上风。</p>
 <p><strong>电子游戏迷这样去除玩瘾</strong></p>
 <p>和烟瘾一样，电子游戏一旦上瘾就很难戒掉，来自瑞典的李先生和大家分享了他是如何从重度玩电脑游戏状态中走出来的。</p>
-<p>为了突破封锁，用网络<ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E8%AE%B2%E7%9C%9F%E7%9B%B8.md#1">讲真相</a>，李先生掌握了很多电脑技术， 并向其他同修提供电脑技术支持。这个工作技术性很强，紧张而枯燥，在空闲时，他就开始玩简单的电子游戏，给自己放松放松。</p>
+<p>为了突破封锁，用网络<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%AE%B2%E7%9C%9F%E7%9B%B8.md#1">讲真相</a>，李先生掌握了很多电脑技术， 并向其他同修提供电脑技术支持。这个工作技术性很强，紧张而枯燥，在空闲时，他就开始玩简单的电子游戏，给自己放松放松。</p>
 <p>他一直认为自己能把控好时间，其实是在为自己的执著找借口。结果越玩越沉迷，修炼状态也越来越糟，功也不太炼了，法也不太学了。他曾多次下决心，删除过游戏，但过后又玩了起来。</p>
-<p>最后还是李洪志师父的讲法给了他一记重锤。《二零一六年纽约<ahref="https://github.com/nat207/djy/blob/master/gb/tag/%E6%B3%95%E4%BC%9A.md#1">法会</a>讲法》里说：“不止是人得法的问题，把人带动的工作也干不好了丶学习也学不进去，大量的时间用来在电脑丶电玩上，勾引着你去看去玩那些东西。”“浪费你的生命，你还舍不得放下！从做人的角度上看你都不对劲了，何况是修炼。”</p>
+<p>最后还是李洪志师父的讲法给了他一记重锤。《二零一六年纽约<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E4%BC%9A.md#1">法会</a>讲法》里说：“不止是人得法的问题，把人带动的工作也干不好了丶学习也学不进去，大量的时间用来在电脑丶电玩上，勾引着你去看去玩那些东西。”“浪费你的生命，你还舍不得放下！从做人的角度上看你都不对劲了，何况是修炼。”</p>
 <p>这段法真正打醒了他，之后他删除了电脑中的所有游戏。每到休息日，李先生的脑子里有时反应出很强烈的孤独寂寞感，因为以前这部分的时间都被游戏给占据了，从没有过这种难受的感觉。每当这时心里都痒痒的，总想要玩一会儿来把难耐的寂寞感消除掉。这时他就提醒自己这是修炼上的考验。他就用过去玩游戏的时间抓紧了学法炼功，每次炼完功后浑身发热一身轻。</p>
 <p>下午四点多，欧洲法会结束，走出大厅时，不少人在互相谈论著刚刚听到的心得体会。</p>
 <p>一年一度的欧洲法会以及大型讲真相的活动基本结束了，很多人只是一年在欧洲法会上见一面，看到修炼上的进步，也看到了不足，正因为这是弥足珍贵的修炼机会，所以每年都有这么多修炼者齐聚一堂。在德国初冬的凉风中，各国学员互相道别，相约明年再见。 #</p>
@@ -64,36 +64,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/16/10/30/n8443434.md#1">俞晓薇：面对中共罪行“我们可以闭上眼睛吗”</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/16/10/31/n8447671.md#1">鲁鸣：山东一些官员为何害怕真相展板？</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/16/11/4/n8459353.md#1">分析：三年前的大事件或引发习修改《准则》</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/16/11/4/n8461660.md#1">法轮功学员慕尼黑中领馆前抗议 民众知真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/30/n8443434.md#1">俞晓薇：面对中共罪行“我们可以闭上眼睛吗”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/31/n8447671.md#1">鲁鸣：山东一些官员为何害怕真相展板？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/4/n8459353.md#1">分析：三年前的大事件或引发习修改《准则》</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/4/n8461660.md#1">法轮功学员慕尼黑中领馆前抗议 民众知真相</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/31/n11293194.md#1" target="_blank">【征文】章阁：荒谬的社会发展“五阶段论”</a></li><li><a href="https://github.com/nat207/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/14/n7998054.md#1" target="_blank">“如没有法轮功 我后半生一定在轮椅上度过”</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/24/n10585277.md#1" target="_blank">郭小林：“发配”老马号</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/21/n10732313.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/18/n12118997.md#1">世卫大会习近平提20亿美元援助 国人叫苦</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/18/n12117371.md#1">WHA登场世卫中共拒台 料各国将联手发声反制</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116772.md#1">川普：美掌握很多有关病毒实验室的不好信息</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116520.md#1">【一线采访】舒兰公安局瘫痪 爆首例死亡</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116632.md#1">传平壤广场移除金日成、金正日肖像</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/16/n12115144.md#1">对台湾赞不绝口 黄秋生：我的兄弟也要移民了</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116007.md#1">盼辛龙走出丧妻之痛 吴宗宪：已下时间通牒</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/18/n12117650.md#1">因男团解散陷低潮 潘君仑返乡务农找回动力</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/18/n12118146.md#1">吴念真粉专已找回 遗憾贴文“几乎删光”</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/18/n12119095.md#1">巨石强森女儿闯进WWE 成史上最年轻签约选手</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12115416.md#1">【疫情中的纽约人】破解预言的人</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/17/n12116029.md#1">隋朝人仙岛奇遇 回国已是唐朝中期</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/18/n12117860.md#1">蒲隆地驱逐WHO官员 仰赖上帝来抗疫</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/5/1/n12076409.md#1">【历史上的瘟疫】带走伦敦1/5人口的瘟疫</a></li>
-<li><a href="https://github.com/nat207/djy/blob/master/gb/20/4/5/n12004394.md#1">入地府看见善恶记账簿 忏悔改过可销债</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11962520.md#1">企业家吁召开紧急会议 矛头直指中共最高层</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nat207/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nat207/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/7/n8469052.htm">欧洲举行法轮大法法会 修炼故事打动人心</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/7/n8469052.htm">欧洲举行法轮大法法会 修炼故事打动人心</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nat207/djy/blob/master/gb/16/11/7/n8469052.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nat207/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nat207/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nat207/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nat207/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nat207/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/11/7/n8469052.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
